--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="title" content="Gist it !">
+    <meta name="description" content="Your personal code snippet manager">
+    <meta name="author" content="Vignesh Kumar">
+    <meta name="web_author" content="Vignesh Kumar">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
+    <meta name="keywords" content="ember, ember-octane, emberjs, ember-cli, ember-service-worker">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="0 days">
+    <meta name="googlebot" content="noodp">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Cache-control" content="public">
+
     <title>Gist it !</title>
-    <meta name="description" content="Gist it! - Your Personal snipper manager">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+
+    <!-- Android  -->
+    <meta name="theme-color" content="#df4d36">
+    <meta name="mobile-web-app-capable" content="yes">
+
+    <!-- iOS -->
+    <meta name="apple-mobile-web-app-title" content="Gist it !">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <!-- Windows  -->
+    <meta name="msapplication-navbutton-color" content="#df4d36">
+    <meta name="msapplication-TileColor" content="#df4d36">
+    <meta name="msapplication-TileImage" content="">
+    <meta name="msapplication-config" content="">
+
+    <!-- Pinned Sites  -->
+    <meta name="application-name" content="Gist it !">
+    <meta name="msapplication-tooltip" content="Gist it ! - Your personal code snipper manager">
+    <meta name="msapplication-starturl" content="/">
+
+    <!-- Tap highlighting  -->
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <!-- UC Mobile Browser  -->
+    <meta name="full-screen" content="yes">
+    <meta name="browsermode" content="application">
+
+    <!-- Disable night mode for this page  -->
+    <meta name="nightmode" content="enable">
+
+    <!-- Fitscreen  -->
+    <meta name="viewport" content="uc-fitscreen=yes" />
+
+    <!-- Layout mode -->
+    <meta name="layoutmode" content="fitscreen/standard">
+
+    <!-- imagemode - show image even in text only mode  -->
+    <meta name="imagemode" content="force">
+
+    <!-- Orientation  -->
+    <meta name="screen-orientation" content="">
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=auto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=auto" rel="stylesheet">
     <link rel="shortcut icon" href="{{rootURL}}images/gist_it.png">
